--- a/app/public/user_login.html
+++ b/app/public/user_login.html
@@ -8,8 +8,8 @@
     <div>
 		  <h2>用户登录</h2>
 			<form action="/user/login" method="post">
-			  <input type="text" placeholder="请输入用户名"><br>
-			  <input type="password" placeholder="请输入密码"><br>
+			  <input type="text" placeholder="请输入用户名" name='uname'><br>
+			  <input type="password" placeholder="请输入密码" name='upwd'><br>
 				<button>登录</button>
 			</form>
 		</div>
