--- a/app/public/user_login.html
+++ b/app/public/user_login.html
@@ -3,6 +3,7 @@
   <head>
 	  <title></title>	
 	  <meta charset="utf-8">
+		<link href="//netdna.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
 	</head>
 	<body>
     <div>
@@ -10,7 +11,9 @@
 			<form action="/user/login" method="post">
 			  <input type="text" placeholder="请输入用户名" name='uname'><br>
 			  <input type="password" placeholder="请输入密码" name='upwd'><br>
+				<input type="checkbox" name="auto" id="auto"><label for="auto">自动登录</label><br>
 				<button>登录</button>
+        
 			</form>
 		</div>
 	</body>
