--- a/app/public/user_reg.html
+++ b/app/public/user_reg.html
@@ -1,8 +1,9 @@
 <!doctype html>
 <html>
   <head>
-	  <title></title>	
+	  <title>注册</title>	
 	  <meta charset="utf-8">
+		<link rel="icon" href="/favicon.ico" type="image/x-icon">
 	</head>
 	<body>
     <div>
