--- a/app/public/user_login.html
+++ b/app/public/user_login.html
@@ -3,48 +3,13 @@
   <head>
 	  <title>用户登录</title>	
 	  <meta charset="utf-8">
-		<link rel="stylesheet" type="text/css" href="main.css">
-    <script>
-		  //用户登录
-			function login(){
-        var $uname = uname.value;
-				var $upwd = upwd.value;
-				//验证非空
-				if ($uname=="" && $upwd==""){
-           uname_msg.innerHTML = "请输入用户名";
-					 upwd_msg.innerHTML = "请输入密码";
-					 return;
-				}else if($uname=="" && $upwd){
-           uname_msg.innerHTML = "请输入用户名";
-					 upwd_msg.innerHTML = "";
-					 return;
-				}else{
-					uname_msg.innerHTML = "";
-				}
-				if ($upwd==""){
-					upwd_msg.innerHTML = "请输入密码";
-					return;
-				}else{
-					upwd_msg.innerHTML = "";
-				}
-				var xhr=new XMLHttpRequest();
-				xhr.onreadystatechange=function (){
-					if (xhr.readyState==4 && xhr.status==200)	{
-            var result = xhr.responseText;
-						if (result=="1"){
-							alert("登录成功!");
-						}else if(result=="0"){
-							alert("登录失败");
-						}
-					}
-				}
-				xhr.open("get","/user/v1/login/"+$uname+"&"+$upwd,true);
-				xhr.send(null);
-			}
-		</script>
+		<link rel="stylesheet" type="text/css" href="css/sign_in_and_reg.css">
+    <script type="text/javascript" src="js/sign_in_and_reg.js"></script>
 	</head>
 	<body class="bg">
+		<!-- logo -->
 	  <div class="logo"></div>
+		<!-- 登录框 -->
     <div class="input_table">
 		  <table></table>
 		  <h2 class="welcome_title">欢迎登录</h3>
@@ -66,6 +31,10 @@
 			<div class="reg_btn">新用户注册</div>
 			<div class="login_from_three"><hr></div>
 			
+		</div>
+		<!-- 注册框 -->
+		<div class="reg_table">
+      <div class="reg_btn login_sbtn">登录</div>
 		</div>
 	</body>
 </html>
