--- a/app/public/user_login.html
+++ b/app/public/user_login.html
@@ -28,13 +28,25 @@
 			<div class="login_btn" onclick="login()">登&nbsp;&nbsp;&nbsp;&nbsp;录</div>
 			<div class="wpay"><i></i></div>
 			<div class="apay"><i></i></div>
-			<div class="reg_btn">新用户注册</div>
+			<div class="reg_sbtn">新用户注册</div>
 			<div class="login_from_three"><hr></div>
-			
 		</div>
 		<!-- 注册框 -->
 		<div class="reg_table">
-      <div class="reg_btn login_sbtn">登录</div>
+			<h2 class="welcome_title">欢迎注册</h2>
+			<input type="text" placeholder="用户名" class="user_input" maxlength="26" id="runame">
+			<span class="info_msg" id="uname_msg" >11</span>
+			<input type="password" placeholder="密码" class="user_input" maxlength="35" id="rupwd">
+			<span class="info_msg" id="uname_msg" >11</span>
+			<input type="password" placeholder="确认密码" class="user_input" maxlength="35" id="rrupwd">
+			<span class="info_msg" id="uname_msg" >11</span>
+			<input type="text" placeholder="手机号" class="user_input" maxlength="11" id="rphone">
+			<span class="info_msg" id="uname_msg" >11</span>
+			<input type="text" placeholder="邮箱" class="user_input" maxlength="35" id="remail">
+			<span class="info_msg" id="uname_msg" >1sds</span>
+			<div class="login_btn reg_btn" onclick="">注&nbsp;&nbsp;&nbsp;&nbsp;册</div>
+      <div class="reg_sbtn login_sbtn">登录</div>
+			<div class="login_from_three"><hr></div>
 		</div>
 	</body>
 </html>
