add wpay apay icon

--- a/app/public/user_login.html
+++ b/app/public/user_login.html
@@ -41,12 +41,14 @@
 			<input type="password" placeholder="确认密码" class="user_input" maxlength="35" id="rrupwd">
 			<span class="info_msg" id="uname_msg" >11</span>
 			<input type="text" placeholder="手机号" class="user_input" maxlength="11" id="rphone">
-			<span class="info_msg" id="uname_msg" >11</span>
+			<span class="info_msg" id="uname_msg" >发电房</span>
 			<input type="text" placeholder="邮箱" class="user_input" maxlength="35" id="remail">
 			<span class="info_msg" id="uname_msg" >1sds</span>
 			<div class="login_btn reg_btn" onclick="">注&nbsp;&nbsp;&nbsp;&nbsp;册</div>
       <div class="reg_sbtn login_sbtn">登录</div>
 			<div class="login_from_three"><hr></div>
+			<div class="wpay rwpay"><i></i></div>
+			<div class="apay rapay"><i></i></div>
 		</div>
 	</body>
 </html>
